force-app/unpackaged/default/objects/FieloPLT__Transaction__c/fields/F_Online_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>F_Online_Transaction_Type__c</fullName>
    <label>Online Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Donation</fullName>
            </value>
            <value>
                <fullName>Invoice payment</fullName>
            </value>
            <value>
                <fullName>Point purchase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>