force-app/unpackaged/default/objects/FieloPLT__Transaction__c/fields/Flexpoint__c.field-meta.xml
<CustomField>
    <fullName>Flexpoint__c</fullName>
    <defaultValue>0</defaultValue>
    <description>FlexPoint</description>
    <label>FlexPoint</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>