force-app/unpackaged/default/objects/FieloPLT__Transaction__c/fields/FlexpointExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>FlexpointExpirationDate__c</fullName>
    <description>FlexPoint Expiration Date</description>
    <label>FlexPoint Expiration Date</label>
    <type>Date</type>
</CustomField>